--- a/server/views/login.ejs
+++ b/server/views/login.ejs
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
-<%- include('header') %>
+<head>
+<%- include('head_common') %>
+    <title>Login</title>
+</head>
 <body>
 <%- include('navbar') %>
 
@@ -11,16 +14,17 @@
     <hr class="my-4">
     <div class="row">
         <form action="/login" method="post" class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
+            <input type="hidden" name="_csrf" value="<%= typeof csrfToken !== 'undefined' ? csrfToken : '' %>">
             <div class="form-group">
-                <label>Email address</label>
-                <input type="email" name="email" class="form-control" placeholder="Enter email" required>
+                <label for="login-email">Email address</label>
+                <input id="login-email" type="email" name="email" class="form-control" placeholder="Enter email" required>
                 <% if (errors.email.length) { %>
                     <small class="form-text text-danger"><%= errors.email %></small>
                 <% } %>
             </div>
             <div class="form-group">
-                <label>Password</label>
-                <input type="password" name="password" class="form-control" placeholder="Password" required>
+                <label for="login-password">Password</label>
+                <input id="login-password" type="password" name="password" class="form-control" placeholder="Password" required>
                 <% if (errors.password.length) { %>
                     <small class="form-text text-danger"><%= errors.password %></small>
                 <% } %>
