--- a/server/views/register.ejs
+++ b/server/views/register.ejs
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en">
-<%- include('header') %>
+<head>
+<%- include('head_common') %>
+    <title>Register</title>
+</head>
 <body>
 <%- include('navbar') %>
 
@@ -14,26 +17,27 @@
         <form action="/register"
               method="post"
               class="col-xs-12 col-sm-12 col-md-8 col-lg-6">
+            <input type="hidden" name="_csrf" value="<%= typeof csrfToken !== 'undefined' ? csrfToken : '' %>">
 
             <div class="form-group">
-                <label>Username</label>
-                <input type="text" name="username" class="form-control" placeholder="Enter username" required>
+                <label for="register-username">Username</label>
+                <input id="register-username" type="text" name="username" class="form-control" placeholder="Enter username" required>
                 <% if (errors.username.length) { %>
                     <small class="form-text text-danger"><%= errors.username %></small>
                 <% } %>
             </div>
 
             <div class="form-group">
-                <label>Email address</label>
-                <input type="email" name="email" class="form-control" placeholder="Enter email" required>
+                <label for="register-email">Email address</label>
+                <input id="register-email" type="email" name="email" class="form-control" placeholder="Enter email" required>
                 <% if (errors.email.length) { %>
                     <small class="form-text text-danger"><%= errors.email %></small>
                 <% } %>
             </div>
 
             <div class="form-group">
-                <label>Password</label>
-                <input type="password" name="password" class="form-control" placeholder="Password" required>
+                <label for="register-password">Password</label>
+                <input id="register-password" type="password" name="password" class="form-control" placeholder="Password" required>
             </div>
 
             <div class="form-group">
